# wlclip-watch

./: .gitignore  .glimpse  CMakeLists.txt  README.md
src/: main.cpp
